deployment_mysql.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: facturacion-desarrollo
spec:
  selector:
    matchLabels:
      app: contenedormysql
  replicas: 1 
  template:
    metadata:
      labels:
        app: contenedormysql
    spec:
      containers:
      - name: contenedormysql
        image: mysql:8.0.17
        ports:
        - containerPort: 3306
