servicio_mysql.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
  namespace: facturacion-desarrollo
spec:
  selector:
    app: contenedormysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
