servicio_node.yml
kind: Service
apiVersion: v1
metadata:
  name: node-service
  namespace: facturacion-desarrollo
spec:
  selector:
    app: contenedornode
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
