servicio_tomcat.yml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
  namespace: facturacion-desarrollo
spec:
  selector:
    app: contenedortomcat
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
