ingress_node.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
  namespace: facturacion-desarrollo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: node-service
          servicePort: 80
